Update README and package configurations for cross-distro demo
- Enhanced README with detailed project description, setup instructions, and usage guidelines in Spanish.
- Updated CMakeLists.txt to install Python executables and launch files.
- Modified package.xml files to correct maintainer email and add necessary dependencies.
- Created resource directory for cross_distro_demo.

--- a/src/cross_distro_demo/CMakeLists.txt
+++ b/src/cross_distro_demo/CMakeLists.txt
@@ -3,25 +3,31 @@ project(cross_distro_demo)
 
 # Find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+find_package(rclpy REQUIRED)
 find_package(custom_interfaces REQUIRED)
 
-# Include directories
-include_directories(include)
+# Install Python modules
+ament_python_install_package(${PROJECT_NAME})
 
-# Add executable for the publisher
-add_executable(pc_publisher src/cross_distro_demo/pc_publisher.cpp)
-ament_target_dependencies(pc_publisher rclcpp custom_interfaces)
-
-# Add executable for the subscriber
-add_executable(pi_subscriber src/cross_distro_demo/pi_subscriber.cpp)
-ament_target_dependencies(pi_subscriber rclcpp custom_interfaces)
-
-# Install targets
-install(TARGETS
-  pc_publisher
-  pi_subscriber
+# Install Python executables
+install(PROGRAMS
+  cross_distro_demo/pc_publisher.py
+  cross_distro_demo/pi_subscriber.py
+  cross_distro_demo/message_relay.py
   DESTINATION lib/${PROJECT_NAME}
+)
+
+# Install launch files
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+# Install config files
+install(DIRECTORY
+  config
+  DESTINATION share/${PROJECT_NAME}
 )
 
 ament_package()
