--- a/src/wsl_raspi_comm/package.xml
+++ b/src/wsl_raspi_comm/package.xml
@@ -9,6 +9,7 @@
 
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
+  <depend>wsl_raspi_comm_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
